--- a/static/index.html
+++ b/static/index.html
@@ -2,55 +2,101 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Table Watcher Page</title>
+    <title>aw-watcher-table</title>
     <style>
-        span{font-family: sans-serif;}
+        body{
+            font-family: sans-serif;
+            overflow: hidden;
+            margin: 0;
+            height: 100vh;
+        }
     </style>
 </head>
 <body>
-<span id="content"></span>
-<script type="application/javascript">
-    const urlParams = new URLSearchParams(window.location.search);
-    const view = urlParams.get('view');
-    let data = urlParams.get('data');
-
-    if(view && data){
-        data = JSON.parse(data);
-
-        if(data.length === 0){
-        	document.getElementById("content").innerHTML = "No data!";
-        }else{
-            function getDurationOfStatus(status){
-                return data
-                    .filter(e => e.data.status === status)
-                    .map(e => e.duration)
-                    .reduce((a, b) => a + b, 0);
-            }
-
-            const totalStanding = getDurationOfStatus("standing");
-            const totalSitting = getDurationOfStatus("sitting");
-            const total = totalStanding + totalSitting;
-
-            if(view === "percent"){
-                const percentStanding = (totalStanding / total) * 100;
-                const percentSitting = (totalSitting / total) * 100;
-
-                document.getElementById("content").innerHTML =
-                    `<b>Table Stats Percent</b><br>`+
-                    `Standing: ${percentStanding.toFixed(2)}%<br>`+
-                    `Sitting: ${percentSitting.toFixed(2)}%`;
-
-            }else if(view === "total"){
-                document.getElementById("content").innerHTML =
-                    `<b>Table Stats Total</b><br>`+
-                    `Total time: ${total} seconds<br>`+
-                    `Standing: ${totalStanding} seconds<br>`+
-                    `Sitting: ${totalSitting} seconds`;
-            }
+Loading...
+</body>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/moment@2.27.0"></script>
+<script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-moment@0.1.1"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.0/axios.min.js"></script>
+<script>
+    // A small hack to make the aw-client work in the browser without webpack
+    const exports = {};
+    function require(name){
+        if (name === 'axios') {
+            return axios;
         }
-    }else{
-    	document.getElementById("content").innerHTML = "Error!";
+        throw new Error(`Cannot find module '${name}'`);
     }
 </script>
-</body>
+<script src="https://cdn.jsdelivr.net/npm/aw-client@0.3.4/out/aw-client.min.js"></script>
+<script defer>
+    const urlParams = new URLSearchParams(window.location.search);
+    const start = urlParams.get('start');
+    const end = urlParams.get('end');
+    const hostname = urlParams.get('hostname');
+    const title = urlParams.get('title') || 'percent';
+
+    console.log(urlParams)
+    console.log(title)
+
+    const client = new AWClient('test-client', {baseURL: window.location.origin});
+
+    function avg(arr) {
+        return arr.reduce((a, b) => a + b, 0) / arr.length;
+    }
+    function round(num) {
+        return Math.round((num + Number.EPSILON) * 100) / 100
+    }
+    function getScale(){
+        if(title === 'percent'){
+            return {
+                min: 0,
+                max: 100
+            }
+        }
+    }
+    function getValue(data){
+        if(title === 'percent'){
+            console.log(data.status);
+            return round(avg(data.status));
+        }
+    }
+
+    client.query([`${start}/${end}`], [`RETURN = limit_events(query_bucket("aw-watcher-table_${hostname}"), 10);`]).then((awData) => {
+        const data = {
+          datasets: [{
+            label: 'CPU Percentage',
+            data: awData[0].map((d) => ({x: new Date(d.timestamp), y: getValue(d.data)})),
+            fill: true,
+            borderColor: 'rgb(41, 255, 1)',
+            tension: 0.25
+          }]
+        };
+        console.log(data);
+        const ctx = document.createElement('canvas');
+        new Chart(ctx,{
+          type: 'line',
+          data,
+            options: {
+                scales: {
+                    x: {
+                        type: 'time',
+                        min: new Date(start),
+                        max: new Date(end)
+                    },
+                    y: {
+                        ...getScale()
+                    }
+                },
+                responsive: true,
+                maintainAspectRatio: false,
+            }
+        });
+        document.body.removeChild(document.body.firstChild);
+        document.body.appendChild(ctx);
+    }).catch((err) => {
+        document.body.innerText = err.message;
+    });
+</script>
 </html>
